[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-regulation-tracker"
version = "0.1.0"
description = "Nightly agent monitoring AI regulatory developments across OCC, FCA, ECB, FFIEC, CFPB, and EU AI Act"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]